# Firecrest

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md
demo/: CMakeLists.txt  demo.cpp
libraries/FixedIndexVector/: README.md  fiv.hpp
libraries/glad/include/glad/: glad.h
libraries/glad/src/: glad.c
libraries/stb_image/: stb_image.h
src/: Button.h  Camera.h  Charset.cpp  Charset.h  ColoredBatchRenderer.cpp  ColoredBatchRenderer.h  ColoredRect.h  Container.h  Display.h  Element.cpp  Element.h  FreeCamera.cpp  FreeCamera.h  Graph.h  HorisontalCenterer.h  HorisontalPositioning.h  Input.cpp  Input.h  Light.h  PlainGraph.h  Renderer.h  RoundedColoredRect.h  Scene3D.h  Scrollable.h  ShaderQuad.h  ShapeRenderer2D.cpp  ShapeRenderer2D.h  Text.h  TextBox.h  TextInput.h  TextRenderer.cpp  TextRenderer.h  TexturedBatchRenderer.cpp  TexturedBatchRenderer.h  UniformGrid.h  VerticalCenterer.h  VerticalContainer.h  VerticalPositioning.h  Window.cpp  Window.h  (+1 more)
src/alignment/: Alignment.h  Conditional.h  ElementAlignment.h  Max.h  Min.h  MirrorHeight.h  MirrorWidth.h  Pixels.cpp  Pixels.h  Relative.cpp  Relative.h  SwapRef.h
src/core/: Maths.cpp  Maths.h  Random.cpp  Random.h  Rectangle.h  StringUtils.cpp  StringUtils.h  Time.h  Tracked.h
src/generators/: CircleGenerator.h  RoundedRectGenerator.h  ShapeGenerator.h
src/gl/: Buffer.h  ComputeShader.h  IndexBuffer.cpp  IndexBuffer.h  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  OpenGL.h  RenderRegion.cpp  RenderRegion.h  RenderTarget.cpp  RenderTarget.h  SSBO.cpp  SSBO.h  SSBOLayout.h  Shader.cpp  Shader.h  Shape.cpp  Shape.h  Texture.cpp  Texture.h  Texture2D.cpp  Texture2D.h  Vertex3D.h  VertexArray.cpp  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
src/input/: ElementEvents.h  RawEvents.h
src/res/: MeshLoader.cpp  MeshLoader.h  ResourceManager.cpp  ResourceManager.h  types.h
